2008-10-14 Chris Allegretta <chrisa@asty.org>
	* nanorc.5: Fix redo man page entry and update explanation, reported by
	  Eitan Adler <eitanadlerlist@gmail.com>

2008-10-13 Chris Allegretta <chrisa@asty.org>
	* Remove CUTTOEND as an undo type as it's unneeded, fix u->to_end logic in undo struct.
	* undo.c (update_undo): Don't free cutbuffer if NULL, fix for Savannah bug #24499

2008-10-04 Chris Allegretta <chrisa@asty.org>
	* cut.c (Add_undo): Save last cut undo information so it can be used for next uncut, fixes
	  Savannah bug 24183.

GNU nano 2.1.6 - 2008.10.03
2008-10-03 Pascal Gentil <pascal.gentil@univ-rennes1.fr>
	* fortran.nanorc: Sample python syntax highlighting file

2008-09-30 Dirkjan Ochtman <dirkjan@ochtman.nl>
	* python.nanorc: Small python syntax update

2008-09-30 <bluestorm_dylc@hotmail.com>
	* ocaml.nanorc: Sample OCaml syntax highlighting file

2008-09-30 Dave Geering <dgeering@toshiba-tap.com>
	* objc.nanorc: Sample Objective-C Syntax Hightlighting file

2008-09-30 Chris Allegretta <chrisa@asty.org>
        * configure.ac: Change extra, multibuffer, color and rcfile configure options to default to enabled
          --enable-tiny will now disable these options as well
	* python.nanorc, ruby.nanorc: Add header lines for python and ruby as well

2008-09-21 Chris Allegretta <chrisa@asty.org>
	* rcfile.c, color.c, nano.h: Add new capability for matching a syntax type by the "header" (1st line)
	  of a file being edited.  Based on Savannah bug 24197 and inital proof of concept by Dave Geering 
	  <dgeering@toshiba-tap.com>

2008-09-16 Chris Allegretta <chrisa@asty.org>
	* text.c: Add support for undoing a text uncut.  Split out the undo and redo of a text cut 
	  in order to avoid code duplication.

2008-09-06 Chris Allegretta <chrisa@asty.org>
	* nano.c: Do call disable_signals at startup regardless, since under cygwin we can't generate
	  ^C without it.

GNU nano 2.1.5 - 2008.08.30
2008-08-29 Chris Allegretta <chrisa@asty.org>